# src/routes/v1/greeting.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { getGreeting } from '../../controllers/greeting';
+
+const greetingRouter = Router();
+
+greetingRouter.post('/users', getGreeting);
+
+export { greetingRouter };
