# src/routes/v1/math.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { add } from '../../controllers/math';
+
+const addRouter = Router();
+
+addRouter.get('/add', add);
+
+export { addRouter };
